# advent-of-code

./: .gitignore  Cargo.toml  README.md  flake.nix
2015/rust/: Cargo.toml  build.rs  solutions.rs
2015/rust/day01/src/: main.rs
2015/rust/day02/: Cargo.toml
2015/rust/day02/src/: main.rs
2015/rust/day03/: Cargo.toml
2015/rust/day03/src/: main.rs
2015/rust/src/: day04.rs  day05.rs  main.rs  solutions.rs
2015/rust/src/solutions/: day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2016/examples/: day07.example2
2016/rust/: Cargo.toml
2016/rust/src/: solutions.rs
2016/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
2018/d06/: input.txt  main.go  table.txt
2018/d07/: main.go
2018/d08/: main.go
2018/d10/: main.go
2018/d11/: .main.go.swp  main.go
2018/d12/: input.txt
2018/d13/: main.go
2018/d16/: main.go
2018/d17/: main.go
2018/d18/: main.go
2018/d19/: input.comments
2018/d22/: main.go
2018/d25/: input.1.txt  main.go
2018/go/d09/: main.go
2018/go/d10/: main.go
2018/go/d11/: main.go
2018/go/d12/: main.go
2018/go/d14/: main.go  main_test.go
2018/go/d17/: input.txt
2018/go/d19/: input.1.txt
2018/go/d20/: main.go  main_test.go
2018/go/d21/: main.go
2018/go/d22/: main_test.go
2018/go/d23/: main.go
2018/rust/: Cargo.toml
2018/rust/d03/: Cargo.toml
2018/rust/d04/: Cargo.toml
2018/rust/d06/: Cargo.toml
2018/rust/d10/: Cargo.toml
2018/rust/d13/: example-result
2018/rust/d16/: Cargo.toml
2018/rust/d17/: results.txt
2018/rust/d18/: Cargo.toml
2018/rust/d19/: Cargo.toml  input.commented
2018/rust/d20/: Cargo.toml
2018/rust/d21/: input.commented  input.commented2  input.py
2018/rust/d23/: Cargo.toml
2018/rust/d24/: Cargo.toml
2020/rust/: Cargo.toml
2020/rust/aoc_utils/: Cargo.toml
2020/rust/day8/: Cargo.toml
2020/rust/day8/src/: main.rs
2021/rust/: Cargo.toml  build.rs  day20.sample1
2022/examples/: day11.example2  day22.example2  day22.example3
2022/rust/: Cargo.toml  build.rs
2022/rust/src/: solutions.rs
2022/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2023/inputs/: day23.input
2023/rust/: Cargo.toml  edges.txt
2023/rust/src/: main.rs  solutions.rs
2023/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2024/examples/: day06.example2
2024/rust/: Cargo.toml
2024/rust/src/: solutions.rs
2024/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2025/rust/: Cargo.toml
2025/rust/src/: main.rs  solutions.rs
2025/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day1.rs
utils/rust/: Cargo.toml
(+130 files in other folders)
