[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sscanf = "0.1.3"
anyhow = "1.0.50"
regex = "1.5.4"
lazy_static = "1.4.0"
petgraph = "0.6.0"