[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "aoc2022"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../../utils/rust/" }
#sscanf = "0.1.3"
#anyhow = "1.0.50"
#regex = "1.5.4"
#lazy_static = "1.4.0"
#itertools = "0.10.1"
#clap = "3.1.6"

[build-dependencies]
aoc_utils = { path = "../../utils/rust/" }