[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "aoc2024"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../../utils/rust/aoc_utils"}

[build-dependencies]
aoc_builder = { path = "../../utils/rust/aoc_builder" }
