[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "aoc2024"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../../utils/rust/aoc_utils"}
gcd = "2.3.0"
nalgebra = "0.33.2"
nom = "7.1.3"
regex = "1.11.1"

[build-dependencies]
aoc_builder = { path = "../../utils/rust/aoc_builder" }
