[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "aoc2025"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../../utils/rust/aoc_utils"}
nom = "8.0.0"

[build-dependencies]
aoc_builder = { path = "../../utils/rust/aoc_builder" }
