[package]
name = "day8"
version = "0.1.0"
authors = ["J. Fernando Sánchez <balkian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aoc_utils = {path= "../aoc_utils"}
regex = "1"
lazy_static = "1.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"